config: make plexil debug listener non-blocking
Speeds up execution a bit if it does not have to communicate with the
viewer all the time.

--- a/cfg/conf.d/plexil.yaml
+++ b/cfg/conf.d/plexil.yaml
@@ -118,7 +118,7 @@ plexil:
         attr:
           Port: 49100
           HostName: 127.0.0.1
-          Blocking: true
+          Blocking: false
     #   # The PlanDebugListener outputs as "Node:clock", make sure to enable it in Debug.cfg
     #   - type: PlanDebugListener
 
