config: add SendPrepareDS and SendPrepareRS to PLE files

--- a/cfg/conf.d/plexil.yaml
+++ b/cfg/conf.d/plexil.yaml
@@ -197,6 +197,8 @@ plexil:
         - network_handler.ple
         - SendPrepareBS.ple
         - SendPrepareCS.ple
+        - SendPrepareDS.ple
+        - SendPrepareRS.ple
 
       # PLX to execute.
       plx: plan.plx
