config: add plexil robot_name global state

--- a/cfg/conf.d/plexil.yaml
+++ b/cfg/conf.d/plexil.yaml
@@ -220,6 +220,8 @@ plexil:
         type: String
       - name: team_color
         type: String
+      - name: robot_name
+        type: String
       - name: game_phase
         type: String
       - name: game_state
