--- a/cfg/conf.d/amcl.yaml
+++ b/cfg/conf.d/amcl.yaml
@@ -7,7 +7,7 @@ plugins/amcl:
   # Image file containing the map, must be a PNG file
   # If path starts with slash (/) it's considered to be absolute,
   # otherwise relative to the config directory
-  map_file: maps/rc-2018-temporary.png
+  map_file: maps/ZSH_austria.png
   # Resolution of the map; meters per pixel
   resolution: 0.05
 
@@ -16,7 +16,7 @@ plugins/amcl:
   # around Z axis. Many parts of the system currently ignore yaw.; m
   # There is a wall of one grid cell thickness around the map, therefore
   # set the origin to (-0.05, -0.05)
-  origin_x: -8.4
+  origin_x: -3.95
   origin_y: -0.30
   origin_theta: 0.0
 
