gazebo: build Gazebo msgs
Add msgs as PRESUBDIRS or otherwise clean builds would fail.

--- a/src/plugins/gazebo/Makefile
+++ b/src/plugins/gazebo/Makefile
@@ -16,6 +16,8 @@
 BASEDIR = ../../..
 include $(BASEDIR)/etc/buildsys/config.mk
 
+PRESUBDIRS = msgs
+
 SUBDIRS	= gazsim-llsfrbcomm \
 	  gazsim-llsf-control \
 	  gazsim-gripper \
